# caesar-cpp

./: .clang-format  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build-release.yml  cmake-multi-platform.yml
headers/: benchmark.h  caesar.h  config.h  loader.h  utils.h
include/: benchmark.h  caesar.h  config.h  loader.h  utils.h
src/: benchmark.cpp  caesar.cpp  loader.cpp  main.cpp
text/: 1MiB.txt
